perm sizeを設定